--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -33,8 +33,6 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:singleLine="true"
-        android:scaleX="0.9"
-        android:scaleY="0.9"
         android:alpha="0.7"
         android:gravity="center"
         android:paddingLeft="0dp"
@@ -60,8 +58,6 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:singleLine="true"
-        android:scaleX="0.9"
-        android:scaleY="0.9"
         android:alpha="0.7"
         android:gravity="center"
         android:visibility="gone"
@@ -70,7 +66,38 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_name"
         android:textStyle="bold"
+        android:drawableLeft="@drawable/ic_autorenew_white"
         android:id="@+id/statusRetweetedScreenName"
         android:layout_below="@+id/statusTextView"
         android:layout_toEndOf="@+id/statusIconView"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:alpha="0.7"
+        android:gravity="center"
+        android:paddingLeft="@dimen/status_text_vertical_margin"
+        android:paddingRight="@dimen/status_text_vertical_margin"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:id="@+id/statusClientName"
+        android:layout_below="@+id/statusTextView"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:alpha="0.7"
+        android:gravity="center"
+        android:paddingLeft="@dimen/status_text_vertical_margin"
+        android:paddingRight="@dimen/status_text_vertical_margin"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:id="@+id/statusCreatedAt"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/statusTextView"/>
 </RelativeLayout>
