--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -2,7 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="jp.unknown.works.twinown.UserActivity">
+                tools:context="jp.unknown.works.twinown.TalkActivity">
     <FrameLayout android:id="@+id/fragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
