--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -1,6 +1,8 @@
 <android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/viewPager"
+    android:clipToPadding="false"
+    android:padding="40dp"
     android:background="#A0000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
